<resources>
    <string name="app_name">Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="version">Version</string>
    <string name="build">Build</string>
    <string name="build_date">Build Date</string>
    <string name="developers">Developers</string>
    <string name="developers_names">Colin Ries &amp; Emmanuel Braz</string>
    <string name="copyright">Copyright</string>
    <string name="copyright_label">© Colin Ries, Emmanuel Braz 2016</string>
    <string name="nav_intro">Intro</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="support">Support</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="items">Items</string>
    <string name="how_tos">How-Tos</string>
    <string name="header">Header</string>
    <string name="ingress_guide">Ingress Guide</string>
    <string name="subheader">by @RieCo432 and @Twiistex</string>
    <string name="sample_header">Header</string>
    <string name="sample_subheader">Subheader</string>
    <string name="badge">Badge</string>
    <string name="resonators">Resonators</string>
    <string name="xmps">XMPs</string>
    <string name="ultrastrikes">Ultra Strikes</string>
    <string name="adarefactor">ADA Refactor</string>
    <string name="jarvisvirus">Jarvis Virus</string>
    <string name="shields">Shields</string>
    <string name="axashields">AXA Shields</string>
    <string name="heatsinks">Heat Sinks</string>
    <string name="multihacks">Multi Hacks</string>
    <string name="forceamps">Force AMPs</string>
    <string name="turrets">Turrets</string>
    <string name="linkamps">Link AMPs</string>
    <string name="softbankultralinkamps">Softbank Ultra Link AMPs</string>
    <string name="powercubes">Power Cubes</string>
    <string name="lawsonpowercube">Lawson Power Cube</string>
    <string name="capsules">Capsules</string>
    <string name="mufgcapsules">MUFG Capsules</string>
    <string name="fracker">Fracker</string>
    <string name="keylocker">Key Locker</string>
    <string name="beacons">Beacons</string>
    <string name="main">Main</string>
    <string name="badges">Badges</string>
    <string name="title_activity_item">Items IQ</string>
    <string name="portalkey">Portal Key</string>
    <string name="title_activity_badges">Badges IQ</string>
    <string name="CheckpointPrompt">Current Checkpoint:</string>
    <string name="CyclePrompt">Current Cycle:</string>
    <string name="firstMainMsg">Leave a like, follow or subscription to stay up to date with official Ingress Events!</string>
    <string name="newsfeed">News Feed:</string>
    <string name="ada">ADA</string>
    <string name="builder">Builder</string>
    <string name="connector">Connector</string>
    <string name="engineer">Engineer</string>
    <string name="explorer">Explorer</string>
    <string name="hacker">Hacker</string>
    <string name="illuminator">Illuminator</string>
    <string name="liberator">Liberator</string>
    <string name="mindcontroller">Mind Controller</string>
    <string name="purifier">Purifier</string>
    <string name="recharger">Recharger</string>
    <string name="sojourner">Sojourner</string>
    <string name="specops">SpecOps</string>
    <string name="translator">Translator</string>
    <string name="trekker">Trekker</string>
    <string name="portalsimulator">Portal Simulator</string>
    <string name="portalsim">Portal Sim</string>
    <string name="select_resonators">Select Resonators</string>
    <string name="select_mods">Select Mods</string>
    <string name="select_links">Links:</string>
    <string name="portalData">Portal Data</string>
    <string name="level">Level</string>
    <string name="range">Range</string>
    <string name="hackSpeed">Hack Speed</string>
    <string name="portalBurnoutInsulation">Burnout Insulation</string>
    <string name="portalMitigation">Mitigation</string>
    <string name="deploy">Deploy</string>
    <string name="cancel">Cancel</string>
    <string name="item_variations_level">Levels 1 – 8</string>
    <string name="item_variations_rarity_common">-Common</string>
    <string name="item_variations_rarity_rare">-Rare</string>
    <string name="item_variations_rarity_veryrare">-Very Rare</string>
    <string name="item_variations_rarity_rare_veryrare">-Rare\n-Very Rare</string>
    <string name="item_variations_rarity_all">-Common\n-Rare\n-Very Rare</string>
    <string name="item_variations"><u>Variations:</u></string>
    <string name="xmp">Exotic Matter Pulse Burster</string>
    <string name="item_notes"><u>Notes:</u></string>
    <string name="item_full_name"><u>Full Name:</u></string>
    <string name="item_description"><u>Description:</u></string>
    <string name="item_acquisition"><u>Acquisition:</u></string>
    <string name="item_intro_header">About Items in Ingress</string>
    <string name="item_acquisition_full">-via hacking\n-via passcodes</string>
    <string name="item_acquisition_hacking_only">-via Hacking</string>
    <string name="item_acquisition_passcodes_only">-via Passcodes</string>
    <string name="item_acquisition_store_only">-via the Ingress Store</string>
    <string name="item_acquisition_showingPhone">-by showing local Niantic employees your Agent Profile (to proof you\'ve done the required missions), which will then write down your name.</string>
    <string name="item_image">Image:</string>
    <string name="portalAttackFrequency">Attack Frequency</string>
    <string name="portalOutgoingLinks">Outgoing Links</string>
    <string name="portalForce">Force</string>
    <string name="energy">Energy</string>
    <string name="resonator_description">Resonators are deployed on a portal in order to capture it or upgrade existing resonators.</string>
    <string name="resonator_notes">There\'s a limit of resonators of one level a player can deploy on one portal:\n1x L8\n1x L7\n2x L6\n2x L5\n4x L4\n4x L3\n4x L2\n8x L1</string>
    <string name="xmp_description">XMPs are weapons used to attack enemy portals. XMP\'s from different levels have different ranges of attack and higher potential damage.</string>
    <string name="xmp_notes">They are easy to hack but easy to waste. If you want to lower the number of XMPs you need to take down a portal, make sure you are as close as possible to the portal and long press the Fire button to get up to 20% attack bonus.</string>
    <string name="ultrastrike_description">Contrary to XMPs, Ultra Strikes do more damage but in a much tinier range. That\'s why they are used to destroy shields (by staying the nearest to the middle of a portal) or to destroy single resonators by staying on them as well.</string>
    <string name="ultrastrike_notes">Don\'t waste them, they are not that common in hacks. In order to get more out of an ultra strike, long press the fire button to get up to 20% attack bonus.</string>
    <string name="ada_description">An ADA Refactor is a weapon used to instantly switch the colour of a green portal to blue. Once applied on a portal, mods and resonators stay the same, but the name and the faction of the portal changes and links are being destroyed.</string>
    <string name="ada_notes">Don\'t waste them. You don\'t get AP for destroying resonators, links or fields when using an ADA. Be aware that you can only use an ADA on a portal that\'s maximal one level above your own level. Furthermore, a portal can only be jarvised or adaed once every hour. However, if you should try to use another ada/jarvis before the 1 hour cooldown, your jarvis/ada will be gone.</string>
    <string name="jarvis_description">A Jarvis Virus is a weapon used to instantly switch the colour of a blue portal to green. Once applied on a portal, mods and resonators stay the same, but the name and the faction of the portal changes and links are being destroyed.</string>
    <string name="jarvis_notes">Don\'t waste them. You don\'t get AP for destroying resonators, links or fields when using a Jarvis virus. Be aware that you can only use a Jarvis on a portal that\'s maximal one level above your own level. Furthermore, a portal can only be jarvised or adaed once every hour. However, if you should try to use another ada/jarvis before the 1 hour cooldown, your jarvis/ada will be gone.</string>
    <string name="powercubes_description">Power Cubes are used to refill your XM bar, so you can continue playing without having to pick up XM from the ground.</string>
    <string name="powercubes_notes">XM gain is calculated by multiplying the level of the power cube by 1000.</string>
    <string name="badges_intro_header">About Badges in Ingress:</string>
    <string name="badges_intro">Badges aren\'t important as long as you plan to stay at level 8 or below. But once you want to reach levels above level 8, you will need a certain amount of badges to be able to reach those levels. Other than that, badges don\'t have any function other than bragging rights.</string>
    <string name="badge_full_name"><u>Badge name:</u></string>
    <string name="badge_image">Badge image:</string>
    <string name="badge_description"><u>Description:</u></string>
    <string name="badge_acquisition"><u>How to get it</u></string>
    <string name="badge_versions"><u>Stages/Levels</u></string>
    <string name="badge_notes"><u>Notes</u></string>
    <string name="abaddon">Abaddon</string>
    <string name="darsana">Darsana</string>
    <string name="helios">Helios</string>
    <string name="interitus">Interitus</string>
    <string name="persepolis">Persepolis</string>
    <string name="recursion">Recursion</string>
    <string name="shonin">Shōnin</string>
    <string name="eve">Eve</string>
    <string name="founder">Founder</string>
    <string name="hankjohnson">Hank Johnson</string>
    <string name="initio">Initio</string>
    <string name="innovator">Innovator</string>
    <string name="missionday">Mission Day</string>
    <string name="nl1331">NL-1331</string>
    <string name="stellavyctory">Stella Vyctory</string>
    <string name="susannamoyer">Susanna Moyer</string>
    <string name="vanguard">Vanguard</string>
    <string name="verified">Verified</string>
    <string name="action_submit_faq">Submit Question</string>
    <string name="unlockPortalSim">Unlock Portal Sim   ~2€</string>
    <string name="donateS">Buy us a coke   ~2€</string>
    <string name="donateM">Buy us a beer   ~5€</string>
    <string name="donateL">Buy us lunch    ~10€</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="level4">Level 4</string>
    <string name="level5">Level 5</string>
    <string name="level6">Level 6</string>
    <string name="level7">Level 7</string>
    <string name="level8">Level 8</string>
    <string name="none">None</string>
    <string name="csh">Common Shield</string>
    <string name="rsh">Rare Shield</string>
    <string name="vrsh">Very Rare Shield</string>
    <string name="axash">AXA Shield</string>
    <string name="rla">Rare Link Amp</string>
    <string name="vrla">Very Rare Link Amp</string>
    <string name="sbula">Softbank Ultra Link</string>
    <string name="chs">Common Heatsink</string>
    <string name="rhs">Rare Heatsink</string>
    <string name="vrhs">Very Rare Heatsink</string>
    <string name="cmh">Common Multihack</string>
    <string name="rmh">Rare Multihack</string>
    <string name="vrmh">Very Rare Multihack</string>
    <string name="rfa">Rare Force Amp</string>
    <string name="rt">Rare Turret</string>
    <string name="restore_purchases">Restore Purchases</string>
</resources>