<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/none"
        android:id="@+id/select_none"/>
    <item
        android:title="@string/csh"
        android:icon="@mipmap/item_shieldc"
        android:id="@+id/select_csh"/>
    <item
        android:title="@string/rsh"
        android:icon="@mipmap/item_shieldr"
        android:id="@+id/select_rsh"/>
    <item
        android:title="@string/vrsh"
        android:icon="@mipmap/item_shieldvr"
        android:id="@+id/select_vrsh"/>
    <item
        android:title="@string/axash"
        android:icon="@mipmap/item_shieldaxa"
        android:id="@+id/select_axash"/>
    <item
        android:title="@string/rla"
        android:icon="@mipmap/item_linkampr"
        android:id="@+id/select_rla"/>
    <item
        android:title="@string/vrla"
        android:icon="@mipmap/item_linkampvr"
        android:id="@+id/select_vrla"/>
    <item
        android:title="@string/sbula"
        android:icon="@mipmap/item_softbankultralinkvr"
        android:id="@+id/select_sbula"/>
    <item
        android:title="@string/chs"
        android:icon="@mipmap/item_heatsinkc"
        android:id="@+id/select_chs"/>
    <item
        android:title="@string/rhs"
        android:icon="@mipmap/item_heatsinkr"
        android:id="@+id/select_rhs"/>
    <item
        android:title="@string/vrhs"
        android:icon="@mipmap/item_heatsinkvr"
        android:id="@+id/select_vrhs"/>
    <item
        android:title="@string/cmh"
        android:icon="@mipmap/item_multihackc"
        android:id="@+id/select_cmh"/>
    <item
        android:title="@string/rmh"
        android:icon="@mipmap/item_multihackr"
        android:id="@+id/select_rmh"/>
    <item
        android:title="@string/vrmh"
        android:icon="@mipmap/item_multihackvr"
        android:id="@+id/select_vrmh"/>
    <item
        android:title="@string/rfa"
        android:icon="@mipmap/item_forceampr"
        android:id="@+id/select_rfa"/>
    <item
        android:title="@string/rt"
        android:icon="@mipmap/item_turretr"
        android:id="@+id/select_rt"/>

</menu>