<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/none"
        android:id="@+id/select_none"/>
    <item
        android:title="@string/level1"
        android:icon="@mipmap/item_resonator1"
        android:id="@+id/select_l1"/>
    <item
        android:title="@string/level2"
        android:icon="@mipmap/item_resonator2"
        android:id="@+id/select_l2"/>
    <item
        android:title="@string/level3"
        android:icon="@mipmap/item_resonator3"
        android:id="@+id/select_l3"/>
    <item
        android:title="@string/level4"
        android:icon="@mipmap/item_resonator4"
        android:id="@+id/select_l4"/>
    <item
        android:title="@string/level5"
        android:icon="@mipmap/item_resonator5"
        android:id="@+id/select_l5"/>
    <item
        android:title="@string/level6"
        android:icon="@mipmap/item_resonator6"
        android:id="@+id/select_l6"/>
    <item
        android:title="@string/level7"
        android:icon="@mipmap/item_resonator7"
        android:id="@+id/select_l7"/>
    <item
        android:title="@string/level8"
        android:icon="@mipmap/item_resonator8"
        android:id="@+id/select_l8"/>
</menu>