<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/how_tos"
            android:id="@+id/nav_howto"
            android:icon="@drawable/ic_menu_camera"/>
        <item
            android:title="@string/items"
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_menu_camera"/>
        <item
            android:title="@string/faq"
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_menu_camera"/>
        <item
            android:title="@string/about"
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_camera"/>
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:title="@string/support"
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_menu_camera"/>
            <item
                android:title="@string/feedback"
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_camera"/>
            <item
                android:title="@string/settings"
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_camera"/>
        </menu>
    </item>

</menu>
