<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_submit_faq"
        android:orderInCategory="100"
        android:title="@string/action_submit_faq"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_unlockPortalSim"
        android:orderInCategory="50"
        android:title="@string/unlockPortalSim"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_donateS"
        android:orderInCategory="200"
        android:title="@string/donateS"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_donateM"
        android:orderInCategory="200"
        android:title="@string/donateM"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_donateL"
        android:orderInCategory="200"
        android:title="@string/donateL"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_restore_purchases"
        android:orderInCategory="300"
        android:title="@string/restore_purchases"
        app:showAsAction="never"/>
</menu>
