<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.colinries.guide.BadgesActivity"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/badge_intro_block"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/badges_intro_header"
            android:textColor="@android:color/white"
            android:text="@string/badges_intro_header"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/badges_intro"
            android:id="@+id/badges_intro"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/badge_iq_block"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_name_header"
                android:text="@string/badge_full_name"
                android:textColor="@android:color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_name"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_image_header"
                android:text="@string/badge_image"
                android:textColor="@android:color/white"/>
            <ImageView
                android:layout_width="216dp"
                android:layout_height="216dp"
                android:id="@+id/badge_image"
                android:scaleType="fitCenter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_description_header"
                android:text="@string/badge_description"
                android:textColor="@android:color/white"
                android:layout_marginTop="28dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_description"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_acquisition_header"
                android:text="@string/badge_acquisition"
                android:textColor="@android:color/white"
                android:layout_marginTop="28dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_acquisition"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_variations_header"
                android:text="@string/badge_versions"
                android:textColor="@android:color/white"
                android:layout_marginTop="28dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_variations"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_notes_header"
                android:text="@string/badge_notes"
                android:textColor="@android:color/white"
                android:layout_marginTop="28dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/badge_notes"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
